Fix width/alignment of password-input + toggle
Fixes AB#1349

--- a/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
+++ b/interfaces/PA-App/src/app/shared/password-toggle-input/password-toggle-input.component.html
@@ -2,7 +2,9 @@
   <ion-label position="stacked">
     {{ label }}
   </ion-label>
-  <ion-row class="ion-align-items-center">
+  <div style="display: flex; width: 100%;"
+       class="ion-align-items-center"
+  >
     <ion-input [type]="inputType"
                [name]="name"
                [(ngModel)]="ngModel"
@@ -21,5 +23,5 @@
                 [name]="isPassword() ? 'eye' : 'eye-off'"
       ></ion-icon>
     </ion-button>
-  </ion-row>
+  </div>
 </ion-item>
