--- a/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
@@ -2,7 +2,13 @@
   <ion-item *ngFor="let installment of installments">
     <ion-row class="ion-align-items-center">
       <p>
-        {{ 'page.programs.program-payout.installment-nr'|translate }} {{installment + 1}}
+        {{ 'page.programs.program-payout.installment-nr'|translate }} {{installment.id}}
+        <ion-label *ngIf="installment.statusOpen" position="stacked">
+          {{ 'page.programs.program-payout.open'|translate }}
+        </ion-label>
+        <ion-label *ngIf="!installment.statusOpen" position="stacked">
+          {{ 'page.programs.program-payout.closed'|translate }}
+        </ion-label>
       </p>
       <ion-item class="ion-margin-end">
         <ion-label position="stacked">
@@ -19,8 +25,7 @@
         ></ion-input>
       </ion-item>
   
-      <confirm-prompt [disabled]="!isEnabled"
-                      (confirm)="performPayout(installment + 1)"
+                      (confirm)="performPayout(installment.id)"
                       (cancel)="cancelPayout()"
                       [subHeader]="'page.programs.program-payout.total-amount'|translate"
                       [message]="confirmMessage"
