AB#1355 enable payout-btn only for 1st upcoming

--- a/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
@@ -25,6 +25,7 @@
         ></ion-input>
       </ion-item>
   
+      <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen"
                       (confirm)="performPayout(installment.id)"
                       (cancel)="cancelPayout()"
                       [subHeader]="'page.programs.program-payout.total-amount'|translate"
