Load custom-attributes depending on FSP-choice

--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -40,4 +40,38 @@
   >
     <p [innerHTML]="'personal.select-fsp.conclusion'|translate:{ name:chosenFsp?.fsp }"></p>
   </dialogue-turn>
+
+  <form *ngIf="hasCustomAttributes">
+    <dialogue-turn isConnected="true"
+                   isSpoken="true"
+    >
+      <p>
+        {{ 'personal.select-fsp.attributes.introduction'|translate }}
+      </p>
+    </dialogue-turn>
+
+    <div *ngFor="let attribute of customAttributes; first as isFirst">
+
+      <dialogue-turn actor="self"
+                     [isConnected]="!isFirst"
+                     isSpoken="true"
+      >
+      </dialogue-turn>
+
+    </div>
+
+    <dialogue-turn actor="self"
+                   isConnected="true"
+                   isSpoken="true"
+    >
+      <ion-button type="submit"
+                  [disabled]="hasAnsweredAll"
+                  (click)="submitCustomAttributes()"
+                  expand="block"
+      >
+        {{ 'personal.select-fsp.attributes.submit'|translate }}
+      </ion-button>
+    </dialogue-turn>
+  </form>
+
 </section>
