Enable initFromHistory for SelectFsp-component

--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -41,7 +41,7 @@
     <p [innerHTML]="'personal.select-fsp.conclusion'|translate:{ name:chosenFsp?.fsp }"></p>
   </dialogue-turn>
 
-  <form *ngIf="hasCustomAttributes">
+  <form *ngIf="customAttributes?.length">
     <dialogue-turn isConnected="true"
                    isSpoken="true"
     >
