Add check for pre-existing phone-number to cancel immediately

--- a/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
+++ b/interfaces/PA-App/src/app/personal-components/set-notification-number/set-notification-number.component.html
@@ -1,4 +1,4 @@
-<section>
+<section *ngIf="!isCanceled">
   <dialogue-turn [actor]="ngo">
     <p>
       {{ 'personal.set-notification-number.introduction1'|translate }}
