--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -25,7 +25,7 @@
     <div [ngSwitch]="question.answerType">
       <div *ngSwitchCase="answerTypes.Enum">
         <ion-radio-group [name]="question.code"
-                         (ionChange)="changeAnswers(question.code,$event.target.value)"
+                         (ionChange)="onAnswerChange(question.code,$event.target.value)"
                          debounce="100"
         >
           <ion-item *ngFor="let option of question.options"
@@ -46,7 +46,7 @@
                    [name]="question.code"
                    [value]="answers[question.code]?.value"
                    [disabled]="hasAnswered"
-                   (ionChange)="changeAnswers(question.code,$event.target.value)"
+                   (ionChange)="onAnswerChange(question.code,$event.target.value)"
                    debounce="300"
         ></ion-input>
       </div>
@@ -56,7 +56,7 @@
                    [name]="question.code"
                    [value]="answers[question.code]?.value"
                    [disabled]="hasAnswered"
-                   (ionChange)="changeAnswers(question.code,$event.target.value)"
+                   (ionChange)="onAnswerChange(question.code,$event.target.value)"
                    debounce="100"
         ></ion-input>
       </div>
@@ -65,7 +65,7 @@
                    [name]="question.code"
                    [value]="answers[question.code]?.value"
                    [disabled]="hasAnswered"
-                   (ionChange)="changeAnswers(question.code,$event.target.value)"
+                   (ionChange)="onAnswerChange(question.code,$event.target.value)"
                    debounce="300"
         ></ion-input>
       </div>
@@ -129,7 +129,7 @@
         {{ 'personal.enroll-in-program.submit-confirm'|translate }}
       </ion-button>
       <ion-button type="button"
-                  (click)="change()"
+                  (click)="changeAnswers()"
                   [disabled]="isDisabled"
                   expand="block"
                   fill="outline"
