Make Q-and-A-set be aware of previously filled in answers

--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -16,6 +16,7 @@
   </dialogue-turn>
 
   <q-and-a-set [questions]="questions"
+               [answers]="answers"
                [(isSubmitted)]="hasAnswered"
                [(isEditing)]="hasChangedAnswers"
                (submit)="submit($event)"
