--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -52,6 +52,7 @@
 
 
     <q-and-a-set [questions]="questions"
+                 [answers]="customAttributeAnswers"
                  [(isSubmitted)]="isSubmitted"
                  [(isEditing)]="isEditing"
                  (submit)="submitCustomAttributes($event)"
