Add debug-toggle for Credential listener

--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -26,6 +26,17 @@
     </p>
   </dialogue-turn>
 
+  <div *ngIf="isDebug && !isDisabled && !isListening"
+       class="ion-text-center ion-padding"
+  >
+    <ion-button type="button"
+                fill="outline"
+                color="tertiary"
+                *ngIf="!credentialReceived || !credentialStored"
+                (click)="isListening=true;startListening()"
+    >Start listening</ion-button>
+  </div>
+
   <div *ngIf="isDebug && !isDisabled"
        class="ion-text-center ion-padding"
   >
