--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -9,6 +9,20 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/login"
+                      routerDirection="root"
+                      routerLinkActive
+                      #rlaLogin="routerLinkActive"
+                      [detail]="rlaLogin.isActive"
+                      [color]="rlaLogin.isActive ? 'primary' : ''"
+                      *ngIf="!isLoggedIn"
+            >
+              <ion-icon slot="start" name="log-in"></ion-icon>
+              <ion-label>
+                {{ 'LOGIN'|translate }}
+              </ion-label>
+            </ion-item>
+
             <ion-item routerLink="/home"
                       routerLinkActive
                       routerDirection="root"
@@ -16,6 +30,7 @@
                       #rlaHome="routerLinkActive"
                       [detail]="rlaHome.isActive"
                       [color]="rlaHome.isActive ? 'primary' : ''"
+                      *ngIf="isLoggedIn"
             >
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>
@@ -28,6 +43,7 @@
                       #rlaProgams="routerLinkActive"
                       [detail]="rlaProgams.isActive"
                       [color]="rlaProgams.isActive ? 'primary' : ''"
+                      *ngIf="isLoggedIn"
             >
               <ion-icon slot="start" name="list"></ion-icon>
               <ion-label>
@@ -35,12 +51,12 @@
               </ion-label>
             </ion-item>
             <ion-item routerLink="/help"
-                      routerLinkActive
                       routerDirection="root"
                       routerLinkActive
                       #rlaHelp="routerLinkActive"
                       [detail]="rlaHelp.isActive"
                       [color]="rlaHelp.isActive ? 'primary' : ''"
+                      *ngIf="isLoggedIn"
             >
               <ion-icon slot="start" name="help"></ion-icon>
               <ion-label>
@@ -49,10 +65,12 @@
             </ion-item>
             <ion-item button="true"
                       (click)="logout()"
+                      *ngIf="isLoggedIn"
             >
-              <ion-icon slot="start" name="exit"></ion-icon>
+              <ion-icon slot="start" name="log-out"></ion-icon>
               <ion-label>
                 {{ 'LOGOUT'|translate }}
+                <ion-note class="ion-margin-start">{{ currentUserRole }}</ion-note>
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
