Fix issues with HO login
- simplify JWT Service
- move all User-related logic into Auth.Service
- make isLoggedIn()-check REALLY check for a valid token
- check logged-in state on page-(re)load
- remove "ENTER to submit"-workaround
- fix bug where after log-out, credentials could be reused immediately

--- a/interfaces/HO-Portal/src/app/login/login.page.html
+++ b/interfaces/HO-Portal/src/app/login/login.page.html
@@ -10,11 +10,10 @@
       <ion-col size="4" class="">
 
           <form method="POST"
+                #loginForm
                 (ngSubmit)="doLogin()"
+                (keyup.enter)="doLogin()"
           >
-            <!-- Workaround to make the ENTER-key submit the form -->
-            <button type="submit" hidden>{{ 'page.login.form.submit.label'|translate }}</button>
-
             <ion-item>
               <ion-label position="stacked">{{ 'page.login.form.email.label'|translate }}</ion-label>
               <ion-input type="email"
@@ -43,6 +42,7 @@
 
             <ion-button type="submit"
                         expand="block"
+                        [disabled]="!loginForm?.form?.valid"
             >
               {{ 'page.login.form.submit.label'|translate }}
             </ion-button>
