--- a/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
@@ -28,14 +28,22 @@
         ></ion-input>
       </ion-item>
   
-      <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0"
-                      (confirm)="performPayout(installment); installment.isInProgress = true"
-                      (cancel)="cancelPayout(installment)"
-                      [subHeader]="'page.programs.program-payout.total-amount'|translate"
-                      [message]="confirmMessage"
-      >
-        {{ 'page.programs.program-payout.start-payout'|translate }}
-      </confirm-prompt>
+      <p>
+        <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0"
+                        (confirm)="performPayout(installment); installment.isInProgress = true"
+                        (cancel)="cancelPayout(installment)"
+                        [subHeader]="'page.programs.program-payout.total-amount'|translate"
+                        [message]="confirmMessage"
+        >
+          {{ 'page.programs.program-payout.start-payout'|translate }}
+        </confirm-prompt>
+        <ion-label 
+          *ngIf="totalIncluded === 0 && installment.firstOpen"
+          position="stacked"
+        >
+          {{ 'page.programs.program-payout.none-included'|translate }}
+        </ion-label>
+      </p>
   
       <ion-spinner *ngIf="installment.isInProgress"
                    color="primary"
