--- a/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-payout/program-payout.component.html
@@ -13,7 +13,7 @@
           {{ installment.installmentDate|date:"dd-MM-y" }}
         </ion-label>
       </p>
-      <ion-item class="ion-margin-end" [disabled]="!installment.firstOpen">
+      <ion-item class="ion-margin-end" [disabled]="!installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProgramManager">
         <ion-label position="stacked">
           {{ 'page.programs.program-details.fixedTransferValue'|translate }}
         </ion-label>
@@ -29,7 +29,7 @@
       </ion-item>
   
       <p>
-        <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0"
+        <confirm-prompt [disabled]="!isEnabled || !installment.firstOpen || totalIncluded === 0 || currentUserRole !== userRoleEnum.ProgramManager"
                         (confirm)="performPayout(installment); installment.isInProgress = true"
                         (cancel)="cancelPayout(installment)"
                         [subHeader]="'page.programs.program-payout.total-amount'|translate"
@@ -43,6 +43,14 @@
         >
           {{ 'page.programs.program-payout.none-included'|translate }}
         </ion-label>
+      </p>
+      <p>
+        <ion-button [disabled]="currentUserRole !== userRoleEnum.PrivacyOfficer"
+                    (click)="exportList(installment)"
+        >
+          {{ 'page.programs.program-payout.export-list'|translate }}
+        </ion-button>
+
       </p>
   
       <ion-spinner *ngIf="installment.isInProgress"
