--- a/interfaces/HO-Portal/src/app/program/program.component.html
+++ b/interfaces/HO-Portal/src/app/program/program.component.html
@@ -64,7 +64,7 @@
     </ion-button>
 
   </section>
-  <section *ngIf="currentUserRole === userRoleEnum.ProgramManager && activePhase === 'design'">
+  <section *ngIf="currentUserRole === userRoleEnum.ProgramManager && selectedPhase === 'design'">
     <h2>{{ 'page.programs.program-details.section-details'|translate }}</h2>
 
     <ion-list lines="full">
